Implementando seguranca api, com jwt simples

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.enabled=true
+
+
+jwt.key=78%ggbvb%$$@#@FVBhijlaf2,)))(8ybbhuyCC1___8hbbhg%&*()GCx?+-+52234
+jwt.expirion=1800000
+jwt.issuer=Api Forum
