Config swagger + Monitor spring boot admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.flyway.enabled=true
 jwt.key=78%ggbvb%$$@#@FVBhijlaf2,)))(8ybbhuyCC1___8hbbhg%&*()GCx?+-+52234
 jwt.expirion=1800000
 jwt.issuer=Api Forum
+
+
+spring.boot.admin.client.url=http://localhost:8081 
+management.endpoints.web.exposure.include=*
